<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:background="@color/white"
        android:textSize="50sp" />
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         android:gravity="center">

         <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
             android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btu1"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />

         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="1dp"
             android:background="@color/purple_200"
             android:text="@string/btu2"
             android:textColor="#ecf0f1"
             android:layout_weight="0.25"
             android:textSize="20sp" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@color/purple_200"
            android:text="@string/btu3"
            android:textColor="#ecf0f1"
            android:layout_weight="0.25"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonplus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@color/purple_200"
            android:text="@string/btuplus"
            android:textColor="#ecf0f1"
            android:textSize="20sp"
            android:layout_weight="0.25"
            />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:background="@color/purple_200"
                android:text="@string/btu4"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />
            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
               android:background="@color/purple_200"
                android:text="@string/btu5"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />
            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:background="@color/purple_200"
                android:text="@string/btu6"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />
            <Button
                android:id="@+id/buttonminus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:background="@color/purple_200"
                android:text="@string/btuminus"
                android:textColor="#ecf0f1"
                android:textSize="20sp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btu7"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btu8"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btu9"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonmultipication"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btumul"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btuC"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btu0"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttonequal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btuequal"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
        <Button
            android:id="@+id/buttondivide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.25"
            android:background="@color/purple_200"
            android:text="@string/btudiv"
            android:textColor="#ecf0f1"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:id="@+id/buttonAdvance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/advance_with_history"/>

    <TextView
        android:id="@+id/advanceDisplay"
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:layout_marginTop="2dp"
        android:maxLines="10" />
</LinearLayout>